# launcher

./: .gitignore  README.md  package.json  repomix-output.xml  turbo.json
.github/workflows/: ci.yml  release.yml
ai_context/: CASCADE_INIT.md
apps/launcher/: .env  PROGRESS.md  index.html  launcher-handler.desktop  package.json  vite.config.ts
apps/launcher/ai_context/: 01_project_vision.md  02_business_model.md  03_architecture_rules.md  04_phase_1_tasks.md  05_plugin_system.md  06_roadmap.md  tech_stack.md
apps/launcher/examples/hello-plugin/: Cargo.toml  README.md  build.sh  install.sh  manifest.json
apps/launcher/examples/hello-plugin-ts/: README.md  manifest.json  package.json  tsconfig.json
apps/launcher/examples/hello-plugin/src/: lib.rs
apps/launcher/src/: App.tsx  index.css  vite-env.d.ts
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/src/: auth.rs  config.rs  frecency.rs  lib.rs  settings.rs  terminal.rs  theme.rs
apps/launcher/src-tauri/src/codex/: auth.rs  devserver.rs  installer.rs  mod.rs  session.rs
apps/launcher/src-tauri/src/commands/: mod.rs
apps/launcher/src-tauri/src/indexer/: config.rs  file_index.rs  mod.rs  watcher.rs
apps/launcher/src-tauri/src/oauth/: callback.rs  flow.rs  mod.rs  providers.rs  storage.rs
apps/launcher/src-tauri/src/plugins/: host_api.rs  loader.rs  manifest.rs  mod.rs  registry.rs  runtime.rs
apps/launcher/src-tauri/src/pro/: LICENSE_COMMERCIAL  cloud_sync.rs  codex_pro.rs  mod.rs
apps/launcher/src-tauri/src/providers/: apps.rs  calculator.rs  files.rs  github.rs  google_calendar.rs  google_drive.rs  mod.rs  notion.rs  plugins.rs  slack.rs  system.rs  url.rs  websearch.rs
apps/launcher/src/components/: CalculatorResult.tsx  ErrorBoundary.tsx  Launcher.tsx  ResultItem.tsx  ResultsList.tsx  SearchInput.tsx  Settings.tsx
apps/launcher/src/lib/: themes.ts  widgetRegistry.ts
apps/launcher/src/stores/: ai.ts  auth.ts  codex.ts  launcher.ts  pro.ts  settings.ts
apps/launcher/src/types/: ai.ts  codex.ts  index.ts  pro.ts  widget.ts
apps/server/: .env  next.config.ts  package.json  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/server/app/: layout.tsx  page.tsx
apps/server/app/api/: route.ts
apps/server/lib/: auth.ts  usage.ts
apps/server/lib/ai/: index.ts  models.ts  tools.ts  types.ts
apps/server/lib/db/: index.ts  seed.ts
apps/server/lib/github/: index.ts
apps/server/lib/plugins/: index.ts  registry.ts  types.ts
apps/server/src/: index.ts
apps/server/src/ai/: chat.ts  index.ts  models.ts  tools.ts
apps/server/src/db/: seed.ts
apps/server/src/plugins/: index.ts  registry.ts  storage.ts
apps/server/src/webhooks/: github.ts
apps/web/: .env.example  package.json
apps/web/public/: install.sh
apps/web/src/: proxy.ts  stack-client.ts  stack.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/components/: auth-provider.tsx  category-filter.tsx  github-repo-selector.tsx  header.tsx  monorepo-path-selector.tsx  plugin-actions.tsx  plugin-grid.tsx  search-bar.tsx
apps/web/src/lib/: desktop-auth.ts  pricing.ts  stripe-pricing.ts  usage.ts
plugins/calculator-advanced/: manifest.json  package.json  tsconfig.json
plugins/calculator-advanced/src/: index.ts
plugins/clipboard-history/: manifest.json  package.json
plugins/clipboard-history/src/: index.ts
plugins/code-snippets/: manifest.json  package.json
plugins/code-snippets/src/: index.ts
plugins/emoji-picker/: manifest.json  package.json
plugins/emoji-picker/src/: index.ts
plugins/pomodoro-timer/: README.md  manifest.json  package.json  tsconfig.json
plugins/pomodoro-timer/src/: index.ts
scripts/: tsconfig.json  update-releases.ts
(+109 files in other folders)
