[package]
name = "launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meval = "0.2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
tantivy = "0.22"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
fuzzy-matcher = "0.3"
wasmtime = "27"
wit-bindgen = "0.36"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
axum = "0.7"
tower = "0.5"
zip = "2"
lazy_static = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.7"

