[package]
name = "launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meval = "0.2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
tantivy = "0.22"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
fuzzy-matcher = "0.3"
extism = "1.7"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
axum = "0.7"
tower = "0.5"
zip = "2"
lazy_static = "1.5"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.5"
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
pelite = "0.10"  # For extracting version info from PE executables

